kubernetes/manifests/hardened/account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: app
  labels:
    app: account-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      serviceAccountName: account-service
      hostNetwork: false
      hostPID: false
      containers:
        - name: account-service
          image: meridiantrustbank/account-service:2.1.0
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          securityContext:
            runAsNonRoot: true
            runAsUser: 10002
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
